--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ d3.text("https://raw.githubusercontent.com/charleyferrari/CUNY_DATA_608/master/m
 <div id="output"></div>
 
 <script type="text/javascript">
-document.write('<p>Write a function to load the presidents.csv data and display the data as an html table.</p>');
+document.write('<p>Write a function that will return that president’s height & weight when you type it in.</p>');
 </script>
 
 <script>
