--- a/index.html
+++ b/index.html
@@ -676,15 +676,15 @@
         <div class="col-md-6 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-map"></i>
-            <h3>My Address</h3>
-            <p>A108 Adam Street, New York, NY 535022</p>
+            <h3>Address</h3>
+            <p>333 Schermerhorn St, Brooklyn, NY 11217</p>
           </div>
         </div>
 
         <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-share-alt"></i>
-            <h3>Social Profiles</h3>
+            <h3>Social</h3>
             <div class="social-links">
               <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
               <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
@@ -698,15 +698,15 @@
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-envelope"></i>
-            <h3>Email Me</h3>
-            <p>contact@example.com</p>
+            <h3>Email</h3>
+            <p>christi.valore@gmail.com</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
-            <h3>Call Me</h3>
-            <p>+1 5589 55488 55</p>
+            <h3>Phone</h3>
+            <p>+1917 678 2475</p>
           </div>
         </div>
       </div>
