--- a/index.html
+++ b/index.html
@@ -380,20 +380,20 @@
 
       <div class="section-title">
         <h2>Resume</h2>
-        <p>Check My Resume</p>
       </div>
 
       <div class="row">
         <div class="col-lg-6">
           <h3 class="resume-title">Sumary</h3>
           <div class="resume-item pb-0">
-            <h4>Alice Barkley</h4>
-            <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+            <h4>CHRISTINA VALORE</h4>
+            <h3>Data Analyst</h3>
+            <p><em>Emerging data scientist with seven years of marketing analytics experience creating intuitive data visualizations, building client databases and interpreting large datasets. Currently seeking a new role to further enhance my expertise in predictive analytics and machine learning.</em></p>
             <p>
             <ul>
-              <li>Portland par 127,Orlando, FL</li>
-              <li>(123) 456-7891</li>
-              <li>alice.barkley@example.com</li>
+              <li>PBrooklyn, NY</li>
+              <li>917.678.2475</li>
+              <li>christi.valore@gmail.com</li>
             </ul>
             </p>
           </div>
