--- a/index.html
+++ b/index.html
@@ -384,25 +384,25 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h3 class="resume-title">Sumary</h3>
+          <h3 class="resume-title">SUMMARY</h3>
           <div class="resume-item pb-0">
             <h4>CHRISTINA VALORE</h4>
-            <h3>Data Analyst</h3>
+            <h1>Data Analyst</h1>
             <p><em>Emerging data scientist with seven years of marketing analytics experience creating intuitive data visualizations, building client databases and interpreting large datasets. Currently seeking a new role to further enhance my expertise in predictive analytics and machine learning.</em></p>
             <p>
             <ul>
-              <li>PBrooklyn, NY</li>
+              <li>Brooklyn, NY</li>
               <li>917.678.2475</li>
               <li>christi.valore@gmail.com</li>
             </ul>
             </p>
           </div>
 
-          <h3 class="resume-title">Education</h3>
+          <h3 class="resume-title">EDUCATION</h3>
           <div class="resume-item">
-            <h4>Master of Fine Arts &amp; Graphic Design</h4>
-            <h5>2015 - 2016</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+            <h4>M.S. Data Science</h4>
+            <h5>New York, NY | 2020</h5>
+            <p><em>CUNY School of Professional Studies</em></p>
             <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
           </div>
           <div class="resume-item">
