--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <h1><a href="index.html">Christina Valore</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>data scientist</span> from New York</h2>
+      <h2>I'm a passionate <span>data scientist</span> from New York, specializing in marketing analytics.</h2>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -58,10 +58,8 @@
       </nav><!-- .nav-menu -->
 
       <div class="social-links">
-        <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
         <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
         <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="icofont-skype"></i></a>
         <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
       </div>
 
@@ -76,7 +74,7 @@
 
       <div class="section-title">
         <h2>About</h2>
-        <p>Learn more about me</p>
+        <p></p>
       </div>
 
       <div class="row">
@@ -84,7 +82,7 @@
           <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>UI/UX &amp; Graphic Designer</h3>
+          <h3>Data Scientist</h3>
           <p class="font-italic">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua.
@@ -92,17 +90,17 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1 May 1995</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +123 456 7890</li>
-                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : New York, USA</li>
+                /* <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1 May 1995</li> */
+                <li><i class="icofont-rounded-right"></i> <strong>GitHub:</strong> github.com/christinavalore</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 917.678.2475</li>
+                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Brooklyn, NY</li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 30</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Master</li>
-                <li><i class="icofont-rounded-right"></i> <strong>PhEmailone:</strong> email@example.com</li>
+                /*<li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 30</li>*/
+                <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Master's in Data Science</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> christi.valore@gmail.com</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
               </ul>
             </div>
