--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       </nav><!-- .nav-menu -->
 
       <div class="social-links">
-        <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
         <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
+        <a href="#" class="github"><i class="icofont-github"></i></a>
+        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
       </div>
 
     </div>
@@ -448,7 +448,6 @@
 
       <div class="section-title">
         <h2>Services</h2>
-        <p>My Services</p>
       </div>
 
       <div class="row">
@@ -511,7 +510,6 @@
 
       <div class="section-title">
         <h2>Portfolio</h2>
-        <p>My Work</p>
       </div>
       
       <script type='text/javascript' src='https://prod-useast-b.online.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 1000px; height: 827px;'><object class='tableauViz' width='1000' height='827' style='display:none;'><param name='host_url' value='https%3A%2F%2Fprod-useast-b.online.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;christinavalore' /><param name='name' value='FastestGrowingcompaniesintheUS&#47;Dashboard1&#47;christi.valore@gmail.com&#47;d97c815e-b352-4569-bc05-403151795a2d' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='showAppBanner' value='false' /></object></div>
