--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       </nav><!-- .nav-menu -->
 
       <div class="social-links">
-        <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
-        <a href="#" class="github"><i class="icofont-github"></i></a>
-        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/christina-danielle/" class="linkedin"><i class="icofont-linkedin"></i></a>
+        <a href="https://github.com/christinavalore" class="github"><i class="icofont-github"></i></a>
+        <!--<a href="#" class="instagram"><i class="icofont-instagram"></i></a> -->
       </div>
 
     </div>
@@ -383,30 +383,32 @@
           <h3 class="resume-title">SUMMARY</h3>
           <div class="resume-item pb-0">
             <h4>CHRISTINA VALORE</h4>
-            <h1>Data Analyst</h1>
-            <p><em>Emerging data scientist with seven years of marketing analytics experience creating intuitive data visualizations, building client databases and interpreting large datasets. Currently seeking a new role to further enhance my expertise in predictive analytics and machine learning.</em></p>
+            <h1>Data Scienitist</h1>
+            <p><em>Emerging data scientist with nine years of marketing analytics experience creating intuitive data visualizations, building client databases and interpreting large datasets. Currently seeking a new role to further enhance my expertise in predictive analytics and machine learning.</em></p>
             <p>
             <ul>
-              <li>Brooklyn, NY</li>
-              <li>917.678.2475</li>
-              <li>christi.valore@gmail.com</li>
             </ul>
             </p>
           </div>
 
           <h3 class="resume-title">EDUCATION</h3>
           <div class="resume-item">
-            <h4>M.S. Data Science</h4>
-            <h5>New York, NY | 2020</h5>
+            <h4>MS Data Science</h4>
+            <h5>New York, NY  |  2020</h5>
             <p><em>CUNY School of Professional Studies</em></p>
-            <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+            <li>3.9 GPA</li>
+            <li>Coursework: Data Acquisition and Management, Advanced Programming Techniques, Recommender Systems, Statistics</li>
           </div>
           <div class="resume-item">
-            <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-            <h5>2010 - 2014</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-            <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
-          </div>
+            <h4>BS Applied Mathematics, cum laude</h4>
+            <h5>Brooklyn, NY</h5>
+            <p><em>CUNY College of Technology</em></p>
+        </div>
+        <div class="resume-item">
+            <h4>AS with Honors in Computer Science</h4>
+            <h5>Brooklyn, NY</h5>
+            <p><em>CUNY College of Technology</em></p>
+        </div>
         </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
