--- a/index.html
+++ b/index.html
@@ -386,8 +386,6 @@
             <h1>Data Scienitist</h1>
             <p><em>Emerging data scientist with nine years of marketing analytics experience creating intuitive data visualizations, building client databases and interpreting large datasets. Currently seeking a new role to further enhance my expertise in predictive analytics and machine learning.</em></p>
             <p>
-            <ul>
-            </ul>
             </p>
           </div>
 
@@ -413,7 +411,7 @@
         </div>
         </div>
         <div class="col-lg-6">
-          <h3 class="resume-title">Professional Experience</h3>
+          <h3 class="resume-title">EXPERIENCE</h3>
           <div class="resume-item">
             <h4>Senior graphic design specialist</h4>
             <h5>2019 - Present</h5>
