--- a/index.html
+++ b/index.html
@@ -413,28 +413,39 @@
         <div class="col-lg-6">
           <h3 class="resume-title">EXPERIENCE</h3>
           <div class="resume-item">
-            <h4>Senior graphic design specialist</h4>
-            <h5>2019 - Present</h5>
-            <p><em>Experion, New York, NY </em></p>
+            <h4>Senior Data Analyst</h4>
+            <h5>2017 - 2020</h5>
+            <p><em>INBOX25, New York, NY </em></p>
             <p>
             <ul>
-              <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-              <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-              <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-              <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+              <li>Designed and maintained internal CRM databases utilizing Python scripts to automatically update SQL servers</li>
+              <li>Created custom client dashboards using Shiny to display omni-channel marketing and CRM data to identify business opportunities with the highest probability to close</li>
+              <li>Developed quarterly time-series regression models to determine at-risk clients for renewal contracts</li>
+              <li>Implemented sentiment analysis on client marketing emails using the Natural Language Toolkit in Python to provide real-time suggestions on subject lines and preview text to improve engagement rates</li>
             </ul>
             </p>
           </div>
           <div class="resume-item">
-            <h4>Graphic design specialist</h4>
-            <h5>2017 - 2018</h5>
-            <p><em>Stepping Stone Advertising, New York, NY</em></p>
+            <h4>Senior Marketing Data Analyst</h4>
+            <h5>2013 - 2017</h5>
+            <p><em>RISE-, New York, NY</em></p>
             <p>
             <ul>
-              <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-              <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-              <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-              <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+              <li>Managed CRM databases by developing automated SQL processes to add, update, delete and dedupe records</li>
+              <li>Conducted analysis for A/B and multivariate tests to drive user acquisition, conversion and retention</li>
+              <li>Performed database segmentation utilizing marketing activity such as email opens/clicks, website visits and landing page conversions to create highly personalized re-targeting ads</li>
+              <li>Created data visualizations using Power BI to report on website, email and social media activity</li>
+            </ul>
+            </p>
+        <div class="resume-item">
+            <h4>Marketing Analyst</h4>
+            <h5>2011 - 2013</h5>
+            <p><em>Kamco Supply Corporation, Brooklyn, NY </em></p>
+            <p>
+            <ul>
+              <li>Interpreted and manipulated large sets of raw data in Excel, combining marketing systems to cross-analyze actionable patterns for product performance forecasting</li>
+              <li>Created and managed paid search and social campaigns, providing analysis on effective ad targeting and spending through testing to optimize KPIs</li>
+              <li>Analyzed customer behavior and product performance from website analytics, database queries, Salesforce and Google Analytics to provide recommendations for future marketing campaigns</li>
             </ul>
             </p>
           </div>
