--- a/index.html
+++ b/index.html
@@ -410,6 +410,23 @@
             <p><em>CUNY College of Technology</em></p>
         </div>
         </div>
+        <h3 class="resume-title">SKILLS</h3>
+          <div class="resume-item">
+            <h4>Programming languages:</h4>
+            <ul>
+            <li>R</li>
+            <li>Python</li>
+            <li>SQL</li>
+            <li>C++</li>
+            </ul>
+            <h4>Data visualization tools:</h4>
+            <ul>
+            <li>Shiny</li>
+            <li>PowerBI</li>
+            <li>Tableau Public</li>
+            <li>Salesforce Einstein Analytics</li>
+            </ul>
+          </div>
         <div class="col-lg-6">
           <h3 class="resume-title">EXPERIENCE</h3>
           <div class="resume-item">
