--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="#header">Home</a></li>
-          <li><a href="#about">About</a></li>
+          <!--<li><a href="#about">About</a></li>-->
           <li><a href="#resume">Resume</a></li>
-          <li><a href="#services">Services</a></li>
+            <!-- <li><a href="#services">Services</a></li>-->
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -473,7 +473,7 @@
   </section><!-- End Resume Section -->
 
   <!-- ======= Services Section ======= -->
-     <!-- <section id="services" class="services">
+     <section id="services" class="services">
     <div class="container">
 
       <div class="section-title">
