--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
           <h3 class="resume-title">SUMMARY</h3>
           <div class="resume-item pb-0">
             <h4>CHRISTINA VALORE</h4>
-            <h1>Data Scienitist</h1>
+            <h1>Data Scientist</h1>
             <p><em>Emerging data scientist with nine years of marketing analytics experience creating intuitive data visualizations, building client databases and interpreting large datasets. Currently seeking a new role to further enhance my expertise in predictive analytics and machine learning.</em></p>
             <p>
             </p>
@@ -711,9 +711,8 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social</h3>
             <div class="social-links">
-              <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-              <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-              <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/christina-danielle/" class="linkedin"><i class="icofont-linkedin"></i></a>
+              <a href="https://github.com/christinavalore" class="github"><i class="icofont-github"></i></a>
             </div>
           </div>
         </div>
