--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/yelp.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Recommender System</h4>
               <p>YELP</p>
