--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
               <h4>Recommender System</h4>
               <p>YELP</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/yelp.png" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/jemceach/recommender-systems/blob/master/final-project/report.Rmd" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
                 <a href="https://rpubs.com/jemceach/D612-Final-Project" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
