--- a/index.html
+++ b/index.html
@@ -636,7 +636,8 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email</h3>
-            <p>christi.valore@gmail.com</p>
+            <p> 
+        <a href="mailto:christi.valore@gmail.com">christi.valore@gmail.com</a></p> 
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
