--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
               <p>YELP</p>
               <div class="portfolio-links">
                 <a href="https://github.com/jemceach/recommender-systems/blob/master/final-project/report.Rmd" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="https://rpubs.com/jemceach/D612-Final-Project" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="https://github.com/jemceach/recommender-systems/blob/master/final-project/report.Rmd" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
